# countbits

./: CMakeLists.txt  README.md  build-simple.sh
src/main/: countbits.cc
src/main/feastoffoo/: countbits.h
src/test/: countbits_test.cc
